<resources>
    <string name="app_name">MyMovieAppXML</string>
    <string name="categories">Categories</string>
    <string name="most_popular">Most Popular</string>
    <string name="play_now">Play Now</string>
    <string name="top_rate">Top Rate</string>
    <string name="most_popular_series">Most Popular Series</string>
    <string name="search_view">Search</string>
    <string name="home">Home </string>
    <string name="search">Search</string>
    <string name="download_bottom_nav">Download</string>
    <string name="favorites_menu">Favorites</string>
    <string name="favorite_icon">Favorite</string>
    <string name="arrow_back">ArrowBack</string>
    <string name="iconBackArrow">iconBackArrow</string>
    <string name="unknownTitle">Unknown</string>
    <string name="iconFavorite">iconFavorite</string>
    <string name="calendar">calendar</string>
    <string name="play_button">Play</string>
    <string name="tag_line">Tag Line</string>
    <string name="story_line">Story Line</string>
    <string name="cast">Cast</string>
    <string name="gallery">Gallery</string>
    <string name="imageBackground">imageBackground</string>
    <string name="movie">movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>