<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/containerColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.details.DetailsFragment2">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="86dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ProgressBar>

    <ImageView
        android:id="@+id/imageFromTheMovieOrSeriesForScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="555dp"
        android:contentDescription="@string/imageBackground"
        android:alpha="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <ScrollView

        android:id="@+id/scrollableScreenDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- AppBar layout for using Toolbar as AppBar -->
            <LinearLayout
                android:id="@+id/appBarLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/back_arrow_appBar"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginVertical="8dp"
                        android:layout_marginStart="16dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/iconBackArrow"
                        android:src="@drawable/arrow_back_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movieTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/unknownTitle"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/favoriteIconButton"
                        app:layout_constraintStart_toEndOf="@+id/back_arrow_appBar"
                        app:layout_constraintTop_toTopOf="parent">
                    </TextView>

                    <ImageView
                        android:id="@+id/favoriteIconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginVertical="8dp"
                        android:layout_marginEnd="15dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/iconFavorite"
                        android:src="@drawable/bottom_icon_favorite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                    </ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="260dp"
                android:layout_height="360dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/lightBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
            </ImageView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainImage">

                <ImageView
                    android:id="@+id/calendarIcon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/calendar"
                    android:src="@drawable/calendar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/premiereDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

                <TextView
                    android:id="@+id/premiereDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="2024"
                    android:textColor="@color/greyColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/separatorIcon1"
                    app:layout_constraintStart_toEndOf="@+id/calendarIcon"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <ImageView
                    android:id="@+id/separatorIcon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="separator1"
                    android:src="@drawable/separator"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iconClock"
                    app:layout_constraintStart_toEndOf="@+id/premiereDate"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

                <ImageView
                    android:id="@+id/iconClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="clock"
                    android:src="@drawable/clock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/durationMovieOrSeries"
                    app:layout_constraintStart_toEndOf="@+id/separatorIcon1"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

                <TextView
                    android:id="@+id/durationMovieOrSeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="150 Minutes"
                    android:textColor="@color/greyColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/separatorIcon2"
                    app:layout_constraintStart_toEndOf="@id/iconClock"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <ImageView
                    android:id="@+id/separatorIcon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="separator2"
                    android:src="@drawable/separator"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/categoriesIcon"
                    app:layout_constraintStart_toEndOf="@+id/durationMovieOrSeries"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

                <ImageView
                    android:id="@+id/categoriesIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:contentDescription="categoriIcon"
                    android:src="@drawable/category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/categoriesDescription"
                    app:layout_constraintStart_toEndOf="@+id/separatorIcon2"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

                <TextView
                    android:id="@+id/categoriesDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not Avalaible"
                    android:textColor="@color/greyColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/categoriesIcon"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPunctuation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:contentDescription="stars"
                    android:src="@drawable/star">

                </ImageView>

                <TextView
                    android:id="@+id/punctuation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:text="7.7"
                    android:textColor="@color/orange"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutPunctuation">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonPlay"
                    android:layout_width="115dp"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_play"
                    android:drawableStart="@drawable/play_arrow_24"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/play_button"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <ImageButton
                    android:id="@+id/downloadButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/btn_download"
                    android:contentDescription="ButtonDownload"
                    android:src="@drawable/download_media" />

                <ImageButton
                    android:id="@+id/sharedButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_download"
                    android:contentDescription="ButtonDownload"
                    android:src="@drawable/icon_shared" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tagLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="18dp"
                android:gravity="start"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutButtons">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/tag_line"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tagLineDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:maxLines="5"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id elit in tellus dapibus maximus nec sit amet velit."
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/storyLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/story_line"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/storyLineDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:maxLines="10"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    tools:text = "@tools:sample/lorem/random"
                    />
                <TextView
                    android:id="@+id/castTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/cast"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCast"
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/Gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/gallery"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerGallery"
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>